# BridgeEngine

./: .gitignore  BridgeEngine.h  BrigeEngine.h  BrigeEngine.sln  BrigeEngine.vcxproj  BrigeEngine.vcxproj.filters  CMakeLists.txt  LICENSE  Makefile  README.md  compile_set.h  main  main.c  sw_main.cpp  sw_paint.cpp  swlib.cpp  xmake.lua
Console/: Console.vcxproj  Console.vcxproj.filters  console.cpp
engine/: main.c  main.cpp  sw_main.cpp  sw_paint.cpp
engine/master/: init.c  init.cpp
engine/render/: create.c  create.cpp  draw.c  draw.cpp
engine/window/: window.cpp
include/: publics.h
include/master/: init.h  master.h
include/render/: create.h  draw.h  render.h
include/window/: manager.h  window.hpp
